Begin working register
